--- a/src/views/controllers/AppController/book-form.hbs
+++ b/src/views/controllers/AppController/book-form.hbs
@@ -4,37 +4,40 @@
     <meta charset="utf-8" />
     <title>App</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+            body {
+                background-color: #dfe0e1;
+            }
+            .form-container {
+                background-color: #ffffff;
+                border-radius: 8px;
+                padding: 20px;
+                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            }
+        </style>
 </head>
 <body>
-    <div class="container">
-        <form method="post" action="/create">
-            <div class="row g-3 align-items-center">
-                <div class="col-auto">
-                    <label for="name" class="col-form-label">Name</label>
-                </div>
-                <div class="col-auto">
-                    <input type="text" id="name" name="name" class="form-control" aria-describedby="name">
-                </div>
+     <div class="container mt-5 d-flex flex-column align-items-center">
+            <h1 class="mb-4 text-center">Add book</h1>
+            <div class="form-container w-50">
+                <form method="post" action="/create">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" id="name" name="name" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="author" class="form-label">Author</label>
+                        <input type="text" id="author" name="author" class="form-control" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="pages" class="form-label">Pages</label>
+                        <input type="number" id="pages" name="pages" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100">Create</button>
+                    <a href="/" class="btn btn-secondary w-100 mt-3">Back</a>
+                </form>
             </div>
-            <div class="row g-3 align-items-center">
-                <div class="col-auto">
-                    <label for="author" class="col-form-label">Author</label>
-                </div>
-                <div class="col-auto">
-                    <input type="text" id="author" name="author" class="form-control" aria-describedby="author">
-                </div>
-            </div>
-            <div class="row g-3 align-items-center">
-                <div class="col-auto">
-                    <label for="pages" class="col-form-label">Pages</label>
-                </div>
-                <div class="col-auto">
-                    <input type="number" id="pages" name="pages" class="form-control" aria-describedby="pages">
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </form>
-    </div>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
