--- a/src/views/controllers/AppController/books-list.hbs
+++ b/src/views/controllers/AppController/books-list.hbs
@@ -6,14 +6,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <table class="table">
+    <div class="container mt-5">
+        <h1 class="mb-4 text-center">Books List<h1>
+        <table class="table table-striped text-center">
             <thead>
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Author</th>
-                <th scope="col">Pages</th>
-            </tr>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Pages</th>
+                </tr>
             </thead>
             <tbody>
                 {{#books}}
@@ -30,6 +31,7 @@
                 {{/books}}
             </tbody>
         </table>
+        <a href="/create" class="btn btn-primary">Add a book</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
